--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^10.16.4",
     "html-react-parser": "^4.2.2",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
